--- a/index.html
+++ b/index.html
@@ -11,23 +11,27 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light"  style="background-color: #2abfd3;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Latitude</a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Plots
               </a>
+
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Max Temperature</a>
                 <a class="dropdown-item" href="#">Humidity</a>
                 <a class="dropdown-item" href="#">Cloudiness</a>
                <a class="dropdown-item" href="#">Wind Speed</a>
               </div>
+
               <li class="nav-item">
                 <a class="nav-link" href="#">Comparison</a>
               </li>
@@ -38,8 +42,8 @@
           </ul>
           
         </div>
-      </nav>
-
+      
+    </nav>
   <!-- Our rows function in containers (grid created). -->
   <div class="container">
 
