--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
   <!-- Bring in our bootstrap stylesheet -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+  <!-- Bring in our .css stylesheet -->
   <link rel="stylesheet" href="style.css">
+
+    <!-- Set the name of our title -->
+    <title>Landing Page</title>
 </head>
 
 <body>
+  <!-- Nav Bar Start-->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
-        <a class="navbar-brand" href="#">Latitude</a>
+        <a class="navbar-brand" href="http://127.0.0.1:5500/index.html">Latitude</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -44,146 +49,43 @@
         </div>
       
     </nav>
-  <!-- Our rows function in containers (grid created). -->
-  <div class="container">
-
-    <!-- Our columns function in rows. -->
+  <!-- Nav Bar End -->
+  <!-- Background of landing page -->
+  <div class="jumbotron jumbotron-fluid">
     <div class="row">
-
-      <!-- Columns have 12 areas of width to work with. -->
-
-      <!-- One third of screen (4/12) -->
-      <div class="col-md-4">
-        <!-- This is column 1 of 3 -->
-      </div>
-
-      <!-- One third of screen (4/12) -->
-      <div class="col-md-4">
-        <!-- This is column 2 of 3 -->
-      </div>
-
-      <!-- One third of screen (4/12) -->
-      <div class="col-md-4">
-
-        <!-- This is column 3 of 3 -->
-      </div>
-
-      <!-- Columns float left, so all adjacent rows will appear next to each other (as long as not all space gets taken up) -->
-    </div>
-
-  </div>
-
-
-  <!-- Creates the Overall Grid -->
-  <div class="container">
-
-    <!-- First Row -->
-    <div class="row">
-
-      <!-- First (and only column) -->
-      <div class="col-md-12">
-        <h1>I'm a size 12 column. I am the only column on my row. I stretch the entire width. And keep going.</h1>
-      </div>
-    </div>
-
-    <!-- Second Row -->
-    <div class="row">
-
-      <!-- First of two columns -->
-      <div class="col-md-6">
-        <h1>I'm a size 6 column. I take up half a 12 column row</h1>
-      </div>
-
-      <!-- Second of two columns -->
-      <div class="col-md-6">
-        <h1>I'm a size 6 column. I take up half a 12 column row</h1>
-      </div>
-    </div>
-
-    <!--Third Row-->
-    <div class="row">
-      <!--First of Two Columns-->
-      <div class="col-md-8">
-        <h1>Columns don't need to be the same size. I'm a size 8 column.</h1>
-      </div>
-      <!--Second of Two Columns-->
-      <div class="col-md-4">
-        <h1>They just need to fill 12 columns or less per row. I'm a 4 column.</h1>
-      </div>
-    </div>
-
-    <!--Fourth Row-->
-    <div class="row">
-      <!--First and Only Column in this Row-->
-      <div class="col-md-6">
-        <h1>We can leave part of a row blank, by just not filling it up. I'm a size 6 column</h1>
-      </div>
-    </div>
-
-    <!--Fifth Row-->
-    <div class="row justify-content-end">
-      <!--First and Only Column in this Row-->
-      <!--Notice how horizontally aligned this column to the right-->
-      <div class="col-md-6">
-        <h1>We can also offset a column if we want. I'm a size 6 column, justified to the end of the row</h1>
-      </div>
-    </div>
-
-    <!--Sixth Row-->
-    <div class="row">
-      <!--First and Only Column in this Row-->
-      <div class="col-md-12">
-        <h1>The important things to remember are these:</h1>
-        <h3>1. Columns go inside rows. <small>container &gt; row &gt; column</small></h3>
-        <h3>2. Only 12 columns or less per row.</h3>
-        <h3>3. Rows go inside containers.</h3>
-        <h3>4. Don't try and change the grid.</h3>
-      </div>
-    </div>
-
-    <!--Seventh Row-->
-    <div class="row">
-      <!--First Column in this Row-->
-      <div class="col-md-6">
-        <div class="box">
-          <h1>If you want to change an element inside the grid, then add CSS to the element inside the grid. Not the grid itself.</h1>
+      <div class="col-lg-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Summary: Latitude vs. X</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <!-- Image -->
+              <img class="float-left" src="Resources/assets/images/Fig1.png" alt="This is a graph showing City Latitude vs Max Temperature"
+              <a href="#" class="btn btn-primary">The purpose of this project was to analyze how weather changes<br>
+                as you get closer to the equator. To accomplish this analysis, we<br>
+                first pulled data from the OpenWeatherMap API to assemble<br>
+                a dataset on over 500 cities.<br>
+              <br>
+              <br>
+                After assembling the dataset, we used Matplotlib to plot various<br>
+                aspects of the weather vs. latitude. Factors we looked at included:<br>
+                temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations<br>
+                created as part of the analysis, as well as explanations and descriptions of any trends and correlations<br>
+                witnessed.</a>
+          </div>
         </div>
       </div>
-
-      <!--Second Column in this Row-->
-      <div class="col-md-6">
-        <div class="box">
-          <h1>Adding CSS directly to the grid will probably break things elsewhere, as that isn't the intended usage.</h1>
+      <div class="col-lg-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Visualizations</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
         </div>
       </div>
     </div>
-
-    <!--Eighth Row-->
-    <div class="row">
-      <div class="alert alert-primary" role="alert">
-        I am a component that doesn't have a column
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col">
-        <div class="alert alert-primary" role="alert">
-          I am a component that will take up a full column.
-        </div>
-    </div>
-
-    </div>
-
-    <!--Ninth Row-->
-    <div class="row">
-      <!--First and Only Column in this Row-->
-      <div class="col-md-12">
-        <h1>Using Bootstrap doesn't mean we're never writing CSS again.</h1>
-        <h1>But we can build websites much faster without having to write <strong><i>ALL</i></strong> of the CSS ourselves.</h1>
-      </div>
-    </div>
-
-  </div>
+  </div>  
+  
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
