--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
   <!-- Background of landing page -->
   <div class="jumbotron jumbotron-fluid">
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg-6 offset-lg-1">
+      
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Summary: Latitude vs. X</h5>
