--- a/visualizations/maxtemp.html
+++ b/visualizations/maxtemp.html
@@ -31,9 +31,9 @@
               </a>
 
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Max Temperature</a>
+                <a class="dropdown-item" href="http://127.0.0.1:5500/visualizations/maxtemp.html">Max Temperature</a>
                 <a class="dropdown-item" href="http://127.0.0.1:5500/visualizations/humidity.html">Humidity</a>
-                <a class="dropdown-item" href="#">Cloudiness</a>
+                <a class="dropdown-item" href="http://127.0.0.1:5500/visualizations/cloudiness.html">Cloudiness</a>
                <a class="dropdown-item" href="#">Wind Speed</a>
               </div>
 
