--- a/visualizations/cloudiness.html
+++ b/visualizations/cloudiness.html
@@ -34,7 +34,7 @@
                 <a class="dropdown-item" href="http://127.0.0.1:5500/visualizations/maxtemp.html">Max Temperature</a>
                 <a class="dropdown-item" href="http://127.0.0.1:5500/visualizations/humidity.html">Humidity</a>
                 <a class="dropdown-item" href="http://127.0.0.1:5500/visualizations/cloudiness.html">Cloudiness</a>
-               <a class="dropdown-item" href="#">Wind Speed</a>
+                <a class="dropdown-item" href="http://127.0.0.1:5500/visualizations/windspeed.html">Wind Speed</a>
               </div>
 
               <li class="nav-item">
