Added hyperlinks to comparison.html images.

--- a/visualizations/windspeed.html
+++ b/visualizations/windspeed.html
@@ -57,7 +57,7 @@
         
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Humidity</h5>
+              <h5 class="card-title">Wind Speed</h5>
               <hr/>
                 
                 <!-- Image -->
