--- a/visualizations/comparisons.html
+++ b/visualizations/comparisons.html
@@ -60,23 +60,34 @@
                 <h5 class="card-title">Comparison: Latitude vs. X</h5>
                 <hr/>
                 <p class="card-text">Click any plot to get an in-depth analysis.</p>
-                  <!-- Image 1 -->
-                <a href="http://127.0.0.1:5500/visualizations/maxtemp.html">
-                  <img class="thumbnail5" src="../Resources/assets/images/Fig1.png" alt="This is a graph showing City Latitude vs Max Temperature">
-                </a>
-              <!-- Image 2-->
-                <a href="http://127.0.0.1:5500/visualizations/humidity.html">
-                  <img class="thumbnail6" src="../Resources/assets/images/Fig2.png" alt="This is a graph showing City Latitude vs Humidity"
-                </a>
-              <br>
-              <!-- Image 3-->
-                <a href="http://127.0.0.1:5500/visualizations/cloudiness.html">
-                  <img class="thumbnail7" src="../Resources/assets/images/Fig3.png" alt="This is a graph showing City Latitude vs Cloudiness"
-                </a>
-              <!-- Image 4-->
-                <a href="http://127.0.0.1:5500/visualizations/windspeed.html">
-                  <img class="thumbnail8" src="../Resources/assets/images/Fig4.png" alt="This is a graph showing City Latitude vs Wind Speed"
-                </a>
+                  <div class="row">
+                    <div class="col-sm-3">
+                        <!-- Image 1 -->
+                      <a href="http://127.0.0.1:5500/visualizations/maxtemp.html">
+                        <img class="thumbnail5" src="../Resources/assets/images/Fig1.png" alt="This is a graph showing City Latitude vs Max Temperature">
+                      </a>
+                    </div>  
+                    <div class="col-sm-3">
+                        <!-- Image 2-->
+                      <a href="http://127.0.0.1:5500/visualizations/humidity.html">
+                        <img class="thumbnail6" src="../Resources/assets/images/Fig2.png" alt="This is a graph showing City Latitude vs Humidity"
+                      </a>
+                    </div> 
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <!-- Image 3-->
+                      <a href="http://127.0.0.1:5500/visualizations/cloudiness.html">
+                        <img class="thumbnail7" src="../Resources/assets/images/Fig3.png" alt="This is a graph showing City Latitude vs Cloudiness"
+                      </a>
+                    </div>
+                    <div class="col-sm-3">  
+                        <!-- Image 4-->
+                      <a href="http://127.0.0.1:5500/visualizations/windspeed.html">
+                        <img class="thumbnail8" src="../Resources/assets/images/Fig4.png" alt="This is a graph showing City Latitude vs Wind Speed"
+                      </a>
+                    </div>
+                  </div>    
               </div>
             </div>
           </div>  
