Added href to visualization images on all visualization pages.

--- a/visualizations/comparisons.html
+++ b/visualizations/comparisons.html
@@ -38,7 +38,7 @@
               </div>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Comparison</a>
+                <a class="nav-link" href="http://127.0.0.1:5500/visualizations/comparisons.html#">Comparison</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Data</a>
