Created data.html file.

--- a/visualizations/comparisons.html
+++ b/visualizations/comparisons.html
@@ -41,7 +41,7 @@
                 <a class="nav-link" href="http://127.0.0.1:5500/visualizations/comparisons.html#">Comparison</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Data</a>
+                <a class="nav-link" href="http://127.0.0.1:5500/visualizations/data.html">Data</a>
               </li>
             </li>
           </ul>
