Code validator completed on .html files.

--- a/visualizations/comparisons.html
+++ b/visualizations/comparisons.html
@@ -43,7 +43,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="http://127.0.0.1:5500/visualizations/data.html">Data</a>
               </li>
-            </li>
+            
           </ul>
           
         </div>
@@ -73,7 +73,7 @@
                         <h4>vs Humidity</h4>
                           <!-- Image 2-->
                         <a href="http://127.0.0.1:5500/visualizations/humidity.html">
-                          <img class="thumbnail6" src="../Resources/assets/images/Fig2.png" alt="This is a graph showing City Latitude vs Humidity"
+                          <img class="thumbnail6" src="../Resources/assets/images/Fig2.png" alt="This is a graph showing City Latitude vs Humidity">
                         </a>
                       </div> 
                     </div>
@@ -82,18 +82,18 @@
                         <h4>vs Cloudiness</h4>
                         <!-- Image 3-->
                         <a href="http://127.0.0.1:5500/visualizations/cloudiness.html">
-                          <img class="thumbnail7" src="../Resources/assets/images/Fig3.png" alt="This is a graph showing City Latitude vs Cloudiness"
+                          <img class="thumbnail7" src="../Resources/assets/images/Fig3.png" alt="This is a graph showing City Latitude vs Cloudiness">
                         </a>
                       </div>
                       <div class="col-sm-6">  
                         <h4>vs Wind Speed</h4>
                           <!-- Image 4-->
                         <a href="http://127.0.0.1:5500/visualizations/windspeed.html">
-                          <img class="thumbnail8" src="../Resources/assets/images/Fig4.png" alt="This is a graph showing City Latitude vs Wind Speed"
+                          <img class="thumbnail8" src="../Resources/assets/images/Fig4.png" alt="This is a graph showing City Latitude vs Wind Speed">
                         </a>
                       </div>
                     </div>
-                  </div>      
+                  </div>
               </div>
             </div>
           </div>  
