--- a/visualizations/comparisons.html
+++ b/visualizations/comparisons.html
@@ -17,7 +17,7 @@
 <body>
   <!-- Nav Bar Start-->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
-        <a class="navbar-brand" href="http://127.0.0.1:5500/index.html">Latitude</a>
+        <a class="navbar-brand" href="https://jonweber0328.github.io/Web-Design-Challenge/">Latitude</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -31,17 +31,17 @@
               </a>
 
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="http://127.0.0.1:5500/visualizations/maxtemp.html">Max Temperature</a>
-                <a class="dropdown-item" href="http://127.0.0.1:5500/visualizations/humidity.html">Humidity</a>
-                <a class="dropdown-item" href="http://127.0.0.1:5500/visualizations/cloudiness.html">Cloudiness</a>
-               <a class="dropdown-item" href="http://127.0.0.1:5500/visualizations/windspeed.html">Wind Speed</a>
+                <a class="dropdown-item" href="https://jonweber0328.github.io/Web-Design-Challenge/visualizations/maxtemp.html">Max Temperature</a>
+                <a class="dropdown-item" href="https://jonweber0328.github.io/Web-Design-Challenge/visualizations/humidity.html">Humidity</a>
+                <a class="dropdown-item" href="https://jonweber0328.github.io/Web-Design-Challenge/visualizations/cloudiness.html">Cloudiness</a>
+               <a class="dropdown-item" href="https://jonweber0328.github.io/Web-Design-Challenge/visualizations/windspeed.html">Wind Speed</a>
               </div>
 
               <li class="nav-item">
-                <a class="nav-link" href="http://127.0.0.1:5500/visualizations/comparisons.html#">Comparison</a>
+                <a class="nav-link" href="https://jonweber0328.github.io/Web-Design-Challenge/visualizations/comparisons.html">Comparison</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="http://127.0.0.1:5500/visualizations/data.html">Data</a>
+                <a class="nav-link" href="https://jonweber0328.github.io/Web-Design-Challenge/visualizations/data.html">Data</a>
               </li>
             
           </ul>
