--- a/visualizations/comparisons.html
+++ b/visualizations/comparisons.html
@@ -65,14 +65,14 @@
                       <div class="col-sm-6">
                         <h4>vs Max Temperature</h4>
                           <!-- Image 1 -->
-                        <a href="http://127.0.0.1:5500/visualizations/maxtemp.html">
+                        <a href="https://jonweber0328.github.io/Web-Design-Challenge/visualizations/maxtemp.html">
                           <img class="thumbnail5" src="../Resources/assets/images/Fig1.png" alt="This is a graph showing City Latitude vs Max Temperature">
                         </a>
                       </div>  
                       <div class="col-sm-6">
                         <h4>vs Humidity</h4>
                           <!-- Image 2-->
-                        <a href="http://127.0.0.1:5500/visualizations/humidity.html">
+                        <a href="https://jonweber0328.github.io/Web-Design-Challenge/visualizations/humidity.html">
                           <img class="thumbnail6" src="../Resources/assets/images/Fig2.png" alt="This is a graph showing City Latitude vs Humidity">
                         </a>
                       </div> 
@@ -81,14 +81,14 @@
                       <div class="col-sm-6">
                         <h4>vs Cloudiness</h4>
                         <!-- Image 3-->
-                        <a href="http://127.0.0.1:5500/visualizations/cloudiness.html">
+                        <a href="https://jonweber0328.github.io/Web-Design-Challenge/visualizations/cloudiness.html">
                           <img class="thumbnail7" src="../Resources/assets/images/Fig3.png" alt="This is a graph showing City Latitude vs Cloudiness">
                         </a>
                       </div>
                       <div class="col-sm-6">  
                         <h4>vs Wind Speed</h4>
                           <!-- Image 4-->
-                        <a href="http://127.0.0.1:5500/visualizations/windspeed.html">
+                        <a href="https://jonweber0328.github.io/Web-Design-Challenge/visualizations/windspeed.html">
                           <img class="thumbnail8" src="../Resources/assets/images/Fig4.png" alt="This is a graph showing City Latitude vs Wind Speed">
                         </a>
                       </div>
