--- a/visualizations/humidity.html
+++ b/visualizations/humidity.html
@@ -76,20 +76,20 @@
             <div class="card-body">
               <h5 class="card-title">Visualizations</h5>
               <hr/>
-                <a href="http://127.0.0.1:5500/visualizations/maxtemp.html">
+                <a href="https://jonweber0328.github.io/Web-Design-Challenge/visualizations/maxtemp.html">
                   <img class="thumbnail1" src="../Resources/assets/images/Fig1.png" alt="This is a graph showing City Latitude vs Max Temperature">
                 </a>
               <!-- Image 2-->
-                <a href="http://127.0.0.1:5500/visualizations/humidity.html">
+                <a href="https://jonweber0328.github.io/Web-Design-Challenge/visualizations/humidity.html">
                   <img class="thumbnail10" src="../Resources/assets/images/Fig2.png" alt="This is a graph showing City Latitude vs Humidity">
                 </a>
               <br>
               <!-- Image 3-->
-                <a href="http://127.0.0.1:5500/visualizations/cloudiness.html">
+                <a href="https://jonweber0328.github.io/Web-Design-Challenge/visualizations/cloudiness.html">
                   <img class="thumbnail3" src="../Resources/assets/images/Fig3.png" alt="This is a graph showing City Latitude vs Cloudiness">
                 </a>
               <!-- Image 4-->
-                <a href="http://127.0.0.1:5500/visualizations/windspeed.html">
+                <a href="https://jonweber0328.github.io/Web-Design-Challenge/visualizations/windspeed.html">
                   <img class="thumbnail4" src="../Resources/assets/images/Fig4.png" alt="This is a graph showing City Latitude vs Wind Speed">
                 </a>
               
