--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-3">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Visualizations</h5>
@@ -87,13 +87,13 @@
                   <div class="col-sm-6">
                     <!-- Image 1 -->
                     <a href="https://jonweber0328.github.io/Web-Design-Challenge/visualizations/maxtemp.html">
-                      <img class="thumbnail1" src="Resources/assets/images/Fig1.png" alt="This is a graph showing City Latitude vs Max Temperature">
+                      <img class="responsive thumbnail1" src="Resources/assets/images/Fig1.png" alt="This is a graph showing City Latitude vs Max Temperature">
                     </a>
                   </div>  
                   <div class="col-sm-6">
                     <!-- Image 2-->
                     <a href="https://jonweber0328.github.io/Web-Design-Challenge/visualizations/humidity.html">
-                      <img class="thumbnail2" src="Resources/assets/images/Fig2.png" alt="This is a graph showing City Latitude vs Humidity">
+                      <img class="responsive thumbnail2" src="Resources/assets/images/Fig2.png" alt="This is a graph showing City Latitude vs Humidity">
                     </a>
                   </div> 
                 </div>
@@ -101,13 +101,13 @@
                   <div class="col-sm-6">
                     <!-- Image 3-->
                     <a href="https://jonweber0328.github.io/Web-Design-Challenge/visualizations/cloudiness.html">
-                      <img class="thumbnail3" src="Resources/assets/images/Fig3.png" alt="This is a graph showing City Latitude vs Cloudiness">
+                      <img class="responsive thumbnail3" src="Resources/assets/images/Fig3.png" alt="This is a graph showing City Latitude vs Cloudiness">
                     </a>
                   </div>
                   <div class="col-sm-6">  
                     <!-- Image 4-->
                     <a href="https://jonweber0328.github.io/Web-Design-Challenge/visualizations/windspeed.html">
-                      <img class="thumbnail4" src="Resources/assets/images/Fig4.png" alt="This is a graph showing City Latitude vs Wind Speed">
+                      <img class="responsive thumbnail4" src="Resources/assets/images/Fig4.png" alt="This is a graph showing City Latitude vs Wind Speed">
                     </a>
                   </div>
                 </div>
